--- a/Lecture_7/lecture_7R.ipynb
+++ b/Lecture_7/lecture_7R.ipynb
@@ -69,12 +69,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: selenium in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (4.25.0)\n",
+      "Requirement already satisfied: urllib3<3,>=1.26 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.2)\n",
+      "Requirement already satisfied: trio~=0.17 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from selenium) (0.26.2)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from selenium) (0.11.1)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from selenium) (2024.7.4)\n",
+      "Requirement already satisfied: typing_extensions~=4.9 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from selenium) (4.11.0)\n",
+      "Requirement already satisfied: websocket-client~=1.8 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from selenium) (1.8.0)\n",
+      "Requirement already satisfied: attrs>=23.2.0 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (24.2.0)\n",
+      "Requirement already satisfied: sortedcontainers in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Requirement already satisfied: idna in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (3.7)\n",
+      "Requirement already satisfied: outcome in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0.post0)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.16.0)\n",
+      "Requirement already satisfied: wsproto>=0.14 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
+      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
+      "Requirement already satisfied: webdriver-manager in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (4.0.2)\n",
+      "Requirement already satisfied: requests in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from webdriver-manager) (2.32.2)\n",
+      "Requirement already satisfied: python-dotenv in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from webdriver-manager) (0.21.0)\n",
+      "Requirement already satisfied: packaging in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from webdriver-manager) (23.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from requests->webdriver-manager) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from requests->webdriver-manager) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from requests->webdriver-manager) (2.2.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mcotrina\\anaconda3\\lib\\site-packages (from requests->webdriver-manager) (2024.7.4)\n"
+     ]
+    }
+   ],
    "source": [
-    "# !pip install selenium\n",
-    "# !pip install webdriver-manager"
+    "!pip install selenium\n",
+    "!pip install webdriver-manager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<selenium.webdriver.chrome.webdriver.WebDriver (session=\"5ad8fe763b4c79e3e5a6c916f21bb061\")>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Para abrir el driver\n",
+    "from selenium import webdriver\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "# Initialize the Chrome WebDriver with ChromeDriverManager\n",
+    "driver = webdriver.Chrome(service=webdriver.chrome.service.Service(ChromeDriverManager().install()))\n",
+    "driver"
    ]
   },
   {
@@ -86,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,16 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\Alexander\\\\Documents\\\\GitHub\\\\Diplomado_PUCP\\\\Lecture_7'"
+       "'C:\\\\Users\\\\mcotrina\\\\Documents\\\\GitHub\\\\Diplomado_PUCP_2024\\\\Lecture_7'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,56 +188,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ALEXAN~1\\AppData\\Local\\Temp/ipykernel_38996/1187677997.py:6: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(executable_path=r'chromedriver-win64/chromedriver.exe')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "\n",
     "# Case 1 - Download the driver using ChromeDriverManager\n",
     "#driver = webdriver.Chrome(ChromeDriverManager().install())\n",
-    "driver = webdriver.Chrome(executable_path=r'chromedriver-win64/chromedriver.exe')\n",
+    "#driver = webdriver.Chrome(executable_path=r'chromedriver-win64/chromedriver.exe')\n",
     "#driver.maximize_window()\n",
-    "url = 'https://resultadoshistorico.onpe.gob.pe/EG2021/'\n",
-    "driver.get(url)"
+    "#url = 'https://resultadoshistorico.onpe.gob.pe/EG2021/'\n",
+    "#driver.get(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Case 1 - Download the driver\n",
-    "# driver = webdriver.Chrome('chromedriver.exe')\n",
-    "# driver.maximize_window()\n",
+    "## Case 1 - Download the driver\n",
+    "#driver = webdriver.Chrome('chromedriver.exe')\n",
+    "#driver.maximize_window()\n",
     "\n",
-    "# url = 'https://resultadoshistorico.onpe.gob.pe/EG2021/'\n",
-    "# driver.get( url )"
+    "#url = 'https://resultadoshistorico.onpe.gob.pe/EG2021/'\n",
+    "#driver.get( url )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Case 2 - ChromeDriverManager\n",
-    "# driver = webdriver.Chrome( ChromeDriverManager().install() )\n",
-    "# driver.maximize_window()\n",
+    "#driver = webdriver.Chrome( ChromeDriverManager().install() )\n",
+    "#driver.maximize_window()\n",
     "\n",
-    "# url = 'https://resultadoshistorico.onpe.gob.pe/EG2021/'\n",
-    "# driver.get( url )"
+    "#url = 'https://resultadoshistorico.onpe.gob.pe/EG2021/'\n",
+    "#driver.get( url )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver = webdriver.Chrome(service=webdriver.chrome.service.Service(ChromeDriverManager().install()))\n",
+    "driver.maximize_window()\n",
+    "\n",
+    "url = 'https://resultadoshistorico.onpe.gob.pe/EG2021/'\n",
+    "driver.get( url )"
    ]
   },
   {
@@ -2995,7 +3057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
